--- a/app/src/main/res/layout/activity_log_in_page.xml
+++ b/app/src/main/res/layout/activity_log_in_page.xml
@@ -81,29 +81,31 @@
         android:layout_marginTop="16dp" />
 
     <!-- Don't have an account Text -->
+
+    <!-- Register Now Text (Clickable) with Padding to Increase Touch Target Size -->
+
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="36dp"
         android:text="Don't have an account?"
-        app:layout_constraintTop_toBottomOf="@id/btnLoginL"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="24dp"
-        android:layout_marginStart="65dp" />
+        app:layout_constraintTop_toBottomOf="@id/btnLoginL" />
 
-    <!-- Register Now Text (Clickable) with Padding to Increase Touch Target Size -->
     <TextView
         android:id="@+id/txtGoRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:clickable="true"
         android:fontFamily="sans-serif-medium"
+        android:padding="15dp"
         android:text="Register Now"
         android:textStyle="bold"
-        android:clickable="true"
-        android:padding="15dp"
-    app:layout_constraintTop_toBottomOf="@id/btnLoginL"
-    app:layout_constraintStart_toEndOf="@id/textView4"
-    android:layout_marginTop="24dp"
-    android:layout_marginStart="8dp" />
+        app:layout_constraintStart_toEndOf="@id/textView4"
+        app:layout_constraintTop_toBottomOf="@id/btnLoginL" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
