Small fixes on password, Encryption,fill the requirement of : Input validation(eg. Password must contain at least 1 number, 1 special character…) and Hashing(password, or sensitive data)

--- a/app/src/main/res/layout/activity_log_in_page.xml
+++ b/app/src/main/res/layout/activity_log_in_page.xml
@@ -53,7 +53,8 @@
             android:id="@+id/PasswordInputL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter your password" />
+            android:hint="Enter your password"
+            android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- Forgot Password Text -->
