--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -81,11 +81,14 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:layout_marginBottom="16dp"
+        android:entries="@array/gender_options"
         app:layout_constraintBottom_toTopOf="@+id/btnRegister"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.34"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/confirmPasswordInput" />
+
+
 
     <!-- Register Button -->
 
