Articles of user in Profile Page(with delete)

--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -19,6 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
+        <!-- heyyy   sdsdkasd-->
         <!-- Inner layout for profile details -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
