--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -67,6 +67,7 @@
             app:layout_constraintTop_toBottomOf="@id/articleCategory" />
 
         <!-- Delete Button -->
+        <!-- heyyy   sdsdkasd-->
         <ImageButton
             android:id="@+id/deleteButton"
             android:layout_width="40dp"
