Add data in profile, and update button, change password and forgot password

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -39,22 +39,6 @@ tools:context=".ChangePassword">
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <!-- Username Field -->
-        <EditText
-            android:id="@+id/username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:autofillHints="username"
-            android:hint="@string/hint_username"
-            android:inputType="text"
-            android:minHeight="48dp"
-            android:paddingStart="16dp"
-            android:paddingTop="8dp"
-            android:paddingEnd="16dp"
-            android:paddingBottom="8dp"
-            android:textColor="@android:color/black" />
-
         <!-- First Name Field -->
         <EditText
             android:id="@+id/firstName"
@@ -86,8 +70,6 @@ tools:context=".ChangePassword">
             android:paddingEnd="16dp"
             android:paddingBottom="8dp" />
 
-
-        <!-- Email Field -->
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
@@ -100,41 +82,10 @@ tools:context=".ChangePassword">
             android:paddingStart="16dp"
             android:paddingTop="8dp"
             android:paddingEnd="16dp"
-            android:paddingBottom="8dp" />
-
-
-        <!-- University Field -->
-        <EditText
-            android:id="@+id/university"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:autofillHints="organization"
-            android:hint="@string/hint_university"
-            android:inputType="text"
-            android:minHeight="48dp"
-            android:paddingStart="16dp"
-            android:paddingTop="8dp"
-            android:paddingEnd="16dp"
             android:paddingBottom="8dp"
-            android:textColor="@android:color/black" />
+            android:focusable="false"
+            android:focusableInTouchMode="false"/>
 
-
-        <!-- Department Field -->
-        <EditText
-            android:id="@+id/department"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:autofillHints="organization"
-            android:hint="@string/hint_department"
-            android:inputType="text"
-            android:minHeight="48dp"
-            android:paddingStart="16dp"
-            android:paddingTop="8dp"
-            android:paddingEnd="16dp"
-            android:paddingBottom="8dp"
-            android:textColor="@android:color/black" />
         <!-- Button Row with two buttons -->
         <LinearLayout
             android:layout_width="match_parent"
