--- a/app/src/main/res/layout/activity_email_verification.xml
+++ b/app/src/main/res/layout/activity_email_verification.xml
@@ -13,6 +13,8 @@
         android:layout_height="wrap_content"
         android:hint="Enter your email"
         android:inputType="textEmailAddress"
+        android:focusable="false"
+        android:clickable="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
