Relatonship with LogInPage and 2FA

--- a/app/src/main/res/layout/articles.xml
+++ b/app/src/main/res/layout/articles.xml
@@ -15,13 +15,23 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="8dp" />
 
+    <!-- Profile Button -->
+    <Button
+        android:id="@+id/profileButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Profile"
+        app:layout_constraintTop_toTopOf="@id/addArticleButton"
+        app:layout_constraintStart_toEndOf="@id/addArticleButton"
+        android:layout_marginStart="8dp" />
+
     <!-- RecyclerView for displaying articles -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/newsRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scrollbars="vertical"
-        app:layout_constraintTop_toBottomOf="@id/addArticleButton"
+        app:layout_constraintTop_toBottomOf="@id/profileButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
